footer and alignment fixes

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+.margin-space {
+    margin: auto;
+    max-width: 1100px;
+}
+
 .nav-list {
     top: 3.3rem;
     right: 9rem;
